--- a/styles/style.css
+++ b/styles/style.css
@@ -259,3 +259,31 @@ main section img {
   }
 }
          
+#about {
+  margin: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: center;
+  justify-content: space-around;
+
+}
+#text{
+  padding: 35px;
+  grid-column: 1/3;
+}
+.descending{
+  width: 100%;
+  grid-column: 3/5;
+  grid-row: 1/3;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+.boating{
+  width: 100%;
+  grid-column: 1/3;
+  grid-row: 1/3;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+#paragraph{
+  padding: 35px;
+  grid-column: 3/5;
+}
